1.3.0
-Tweak hide/view channel list menu item
-Fix issues in RBNB Controller with rapid UI changes

1.2.0 - June 21, 2005
-Added command line option (-s or --time-scale) to set the time scale
-Added tabular data panel
-Fix text data panel
-Hide hidden channels by default. Add option to view menu.
-Enable dynamic layout during application resize
-Refactor entire code base to new package structure
-Create data panel interface for dynamic loading and registration via an xml
 configuration file
-Add error dialog when connection to RBNB server fails
-Added queue for state change requests, should fix a few issues with lost state
 changes
-Correctly cleanup data panels when connecting to another server while viewing
 data
-Made the location bar not jump around when a drag is finished and large amounts
 of data are being fetched
-Made the string data panel only accept string data and throw out anything else
-Fixed issue when data panels would clear in RT mode when adding channels
-Notify time listeners when they are added as this doesn't seem to break things
 andy more
-Let the window manager choose the location of the frame
-Hard code the initial size of the window to 800x600
-Tweak the channel list show/hide/resize code to work in a more consistent
 manner
-Fixed bug in J2RE's < 1.5 that would hang the application on exit
-Fix bug when RT mode would not work in rare cases

1.1.0 - March 22, 2005
-Expanded domain slider to include usecond and day time values
-Improved channel list to keep expansion and selection state on refresh
-Added ability to hide channel list, control panel, and status panel
-Added menu items for control of playback
-Added key binding (F5) to refresh channel list
-Added full screen mode for the application. Press F11 to enter and ESC to
 leave.
-Fixed bug in closing empty JPEG Data Panel
-Added key bindings for common operations (see docs/keyboard_shortcuts.txt)
-Removed the channel update button.