@@ -1,7 +1,6 @@
 package org.nees.buffalo.rdv.rbnb;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.Vector;
 
 import org.apache.commons.logging.Log;
@@ -9,14 +8,13 @@ import org.apache.commons.logging.LogFactory;
 import org.nees.buffalo.rdv.DataViewer;
 
 import com.rbnb.sapi.ChannelMap;
-import com.rbnb.sapi.ChannelTree;
 import com.rbnb.sapi.SAPIException;
 import com.rbnb.sapi.Sink;
 
 /**
  * @author Jason P. Hanley
  */
-public class RBNBController implements Player {
+public class RBNBController implements Player, MetadataListener {
 
 	static Log log = LogFactory.getLog(RBNBController.class.getName());
 
@@ -35,8 +33,10 @@ public class RBNBController implements Player {
 	private boolean requestIsMonitor;	
 	
 	private ChannelMap requestedChannels;
-	
+  private ChannelMap metaDataChannelMap;
+
 	private ChannelManager channelManager;
+  private MetadataManager metadataManager;
 	
 	private Vector timeListeners;
 	private Vector stateListeners;
@@ -49,9 +49,7 @@ public class RBNBController implements Player {
 	private ChannelMap preFetchChannelMap;
 	private Object preFetchLock = new Object();
 	private boolean preFetchDone;
-	
-	ChannelMap metaDataChannelMap;
-	
+		
 	private double location;
 	private double playbackRate;
 	private double timeScale;
@@ -70,7 +68,7 @@ public class RBNBController implements Player {
 
  	private boolean dropData;
 	
-	static final double PLAYBACK_REFRESH_RATE = 0.05;
+	private final double PLAYBACK_REFRESH_RATE = 0.05;
 	
 	public RBNBController(double location, double playbackRate, double timeScale) {
 		state = STATE_DISCONNECTED;
@@ -85,9 +83,13 @@ public class RBNBController implements Player {
     this.location = location;
 		this.playbackRate = playbackRate;
 		this.timeScale = timeScale;
-		
-		channelManager = new ChannelManager(); 
-		
+
+    requestedChannels = new ChannelMap();
+    metaDataChannelMap = new ChannelMap();
+
+		channelManager = new ChannelManager();
+    metadataManager = new MetadataManager(this);
+
 		timeListeners = new Vector();
 		stateListeners = new Vector();
 		subscriptionListeners = new Vector();
@@ -95,9 +97,7 @@ public class RBNBController implements Player {
 		timeScaleChangeListeners = new ArrayList();
 		messageListeners = new ArrayList();
 		connectionListeners = new ArrayList();
-		
-		initMetadataListener();
-		
+
 		run();
 	}
 	
@@ -111,8 +111,6 @@ public class RBNBController implements Player {
 	
 	private void runRBNB() {
 		log.info("RBNB data thread has started.");
-		
-		requestedChannels = new ChannelMap();
 		
 		while (state != STATE_EXITING) {
 			
@@ -253,7 +251,7 @@ public class RBNBController implements Player {
 			return false;
  		} else if (oldState == STATE_DISCONNECTED && newState != STATE_EXITING && newState != STATE_DISCONNECTED) {
  			fireConnecting();
-			if (!updateMetadata()) {
+			if (!metadataManager.updateMetadata()) {
 				fireConnectionFailed();
 				return false;
 			}
@@ -361,7 +359,7 @@ public class RBNBController implements Player {
 		}
 		
 		//update metadata
-		updateMetadataBackground();
+		metadataManager.updateMetadataBackground();
 
 		//notify channel manager
 		channelManager.subscribe(channelName, panel);
@@ -1205,6 +1203,25 @@ public class RBNBController implements Player {
 	public void removeConnectionListener(ConnectionListener connectionListener) {
 		connectionListeners.remove(connectionListener);
 	}
+    
+    
+  //Public Metadata Methods
+    
+  public MetadataManager getMetadataManager() {
+    return metadataManager; 
+  }
+  
+  public Channel getChannel(String channelName) {
+    return metadataManager.getChannel(channelName); 
+  }
+  
+  public void updateMetadata() {
+    metadataManager.updateMetadataBackground(); 
+  }
+  
+  public void channelListUpdated(ChannelMap channelMap) {
+    metaDataChannelMap = channelMap;
+  }  
 	
 	//Public Static Methods
 
@@ -1261,164 +1278,6 @@ public class RBNBController implements Player {
 		
 		public boolean isSubscribe() {
 			return isSubscribe;
-		}
-	}
-	
-	
-	// Channel metadata methods
-	
-	private ArrayList metadataListeners;
- 	private boolean updatingMetadata;
- 	
-	private HashMap units;
-	
-	private ChannelTree ctree;
-	
-	private void initMetadataListener() {
-		metadataListeners =  new ArrayList();
-		updatingMetadata = false;
-		
-		units = new HashMap();
-		
-		ctree = ChannelTree.EMPTY_TREE;
-	}	
-	
-	public boolean updateMetadataBackground() {
- 		if (updatingMetadata) return true;
-
-		new Thread(new Runnable() {
-			public void run() {
-				updateMetadata();
-			}
-		}, "ChannelUpdate").start();	
-		
-		return true;
-	}
-
-	public boolean updateMetadata() {
- 		if (updatingMetadata) return true;
- 		
- 		updatingMetadata = true;
-
-		log.info("Updating channel listing.");
-		
-		Sink metadataSink = new Sink();
-		try {
-			metadataSink.OpenRBNBConnection(rbnbHostName + ":" + rbnbPortNumber, "RDVMetadataListener");
-		} catch (SAPIException e) {
-			log.error("Failed to connect to RBNB server.");
-			fireErrorMessage("Failed to connect to the RBNB server.");
-			metadataSink.CloseRBNBConnection();
-			updatingMetadata = false;
-			return false;	
-		}
-				
-		try {
-			metadataSink.RequestRegistration();
-		} catch (SAPIException e) {
-			log.error("Failed to request channel listing.");
-			metadataSink.CloseRBNBConnection();
-			updatingMetadata = false;
-			return false;
-		}
-
-		ChannelMap cmap = null;
-		try {
-			cmap = metadataSink.Fetch(0);
-		} catch (SAPIException e) {
-			log.error("Failed to fetch list of available channels.");
-			metadataSink.CloseRBNBConnection();
-			updatingMetadata = false;
-			return false;
-		}
-		
-		log.info("Received list of available channels.");
-		
-		//create metadata channel tree
-		ctree = ChannelTree.createFromChannelMap(cmap);
-						
-		//subscribe to all units channels
-		ChannelMap unitsChannelMap = new ChannelMap();
-		try {
-			unitsChannelMap.Add("_Units/*");
-		} catch (SAPIException e) {
-			e.printStackTrace();
-		}
-		
-		//get the latest unit information
-		try {
-			metadataSink.Request(unitsChannelMap, 0, 0, "newest");
-		} catch (SAPIException e) {
-			e.printStackTrace();
-		}
-		
-		//fetch the unit channel data
-		try {
-			unitsChannelMap = metadataSink.Fetch(-1);
-		} catch (SAPIException e) {
-			e.printStackTrace();
-		}
-		
-		metadataSink.CloseRBNBConnection();
-		
-		String[] channels = unitsChannelMap.GetChannelList();
-		for (int i=0; i<channels.length; i++) {
-			String channelName = channels[i];
-			String parent = channelName.substring(channelName.lastIndexOf("/")+1);
-			int channelIndex = unitsChannelMap.GetIndex(channelName);
-			String[] data = unitsChannelMap.GetDataAsString(channelIndex);
-			String newestData = data[data.length-1];
-			String[] channelTokens = newestData.split("\t|,");
-			for (int j=0; j<channelTokens.length; j++) {
-				String[] tokens = channelTokens[j].split("=");
-				if (tokens.length == 2) {
-					String channel = parent + "/" + tokens[0].trim();
-					String unit = tokens[1].trim();
-					units.put(channel, unit);
-				} else {
-					log.error("Invalid unit string: " + channelTokens[j] + ".");
-				}
-			}
-		}
-		
-		metaDataChannelMap = cmap;
-		
-		fireMetadataUpdated(cmap);
- 		
-		updatingMetadata = false;
- 		
- 		return true;
-  	}
-	
-	public Channel getChannel(String channelName) {
-		ChannelTree.Node node = ctree.findNode(channelName);
-		if (node != null) {
-			String mime = node.getMime();
-			String unit = getUnit(channelName);
-			Channel channel = new Channel(channelName, mime, unit);
-			return channel;
-		} else {
-			return null;
-		}
-	}	
-	
- 	public String getUnit(String channel) {
- 		return (String)units.get(channel);
- 	}	
-		
-	public void addMetadataListener(MetadataListener listener) {
-		metadataListeners.add(listener);
-	}
-
-	public void removeMetadataListener(MetadataListener listener) {
-		metadataListeners.remove(listener);
-	}
-	
-	private void fireMetadataUpdated(ChannelMap channelMap) {
-		MetadataListener listener;
-		for (int i=0; i<metadataListeners.size(); i++) {
-			listener = (MetadataListener)metadataListeners.get(i);
-			listener.channelListUpdated(channelMap);
 		}
 	}
 }
