@@ -1,6 +1,7 @@
 1.3.0
 -Tweak hide/view channel list menu item
 -Fix issues in RBNB Controller with rapid UI changes
+-Move metadata code to MetadataManager class
 
 1.2.0 - June 21, 2005
 -Added command line option (-s or --time-scale) to set the time scale
